--- a/InvoiceServer/.env.development
+++ b/InvoiceServer/.env.development
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb://localhost/PlacementsDB
-SERVER_PORT=3000
-SERVER_HOST=localhost
+PORT=3000
+HOST=localhost
 NODE_ENV=development
